[package]
name = "kobold-arrow"
version = "0.1.0"
edition = "2021"
description = "Map COBOL fixed-record layouts to equivalent Apache Arrow schemas."
authors = ["infinityabundance"]
license = "Apache-2.0"
repository = "https://github.com/infinityabundance/kobold-arrow"
readme = "README.md"

[dependencies]
# Light by design: emit an Arrow schema as data; do NOT link the heavy `arrow` crate.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
